# py-claw

./: .gitignore  CLAUDE.md  README.md  TUI_DEBUG_WORKFLOW.md  pyproject.toml  todo.md
hooks/: stop-hook.sh
src/: CLAUDE.md
src/py_claw/: CLAUDE.md  command_runtime.py  commands.py  export_service.py  extra_usage_service.py  fast_service.py  new_commands.py  session.py  skills.py  tasks.py
src/py_claw/buddy/: __init__.py  companion.py  prompt.py  sprites.py  types.py
src/py_claw/cli/: CLAUDE.md  control.py  main.py  runtime.py  structured_io.py
tests/: CLAUDE.md  conftest.py  test_agent_hooks.py  test_agent_registry.py  test_agent_remote_backend.py  test_agent_skill_preload.py  test_agent_tracing.py  test_agent_transcript.py  test_agent_worktree.py  test_analytics_service.py  test_api_client.py  test_away_summary.py  test_bash_ast.py  test_bash_security.py  test_bridge_service.py  test_buddy.py  test_cli_and_schemas.py  test_cli_control_runtime.py  test_cli_tui.py  test_commands_session.py  test_commit_service.py  test_compact.py  test_config_service.py  test_context_service.py  test_diff_service.py  test_doctor_service.py  test_file_state_cache.py  test_fork.py  test_git_operation_tracking.py  test_heap_dump.py  test_hooks_runtime.py  test_ide_service.py  test_lsp_runtime.py  test_mcp_auth_service.py  test_mcp_auth_tool.py  test_mcp_runtime.py  test_mcp_service.py  test_mcp_tool.py  test_message_list.py  test_messages.py  (+34 more)
tests/test_tui/: __init__.py  conftest.py  test_overlays.py  test_prompt_input.py  test_prompt_suggestion_ux.py  test_repl_screen.py
(+690 files in other folders)
