[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-claw"
version = "0.1.0"
description = "Python port of the restored Claude Code runtime"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.18,<1",
  "pydantic>=2.8,<3",
  "pypdf>=5,<6",
  "textual>=6,<7",
  "wsproto>=1.0",
  "qrcode>=7.4",
  "Pillow>=10,<11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
py-claw = "py_claw.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
